--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -65,8 +65,8 @@ set-option -g status-right-length 100
 set-option -g status-left " #{session_name}  "
 set-option -g status-right "#{pane_title} "
 set-option -g status-style "fg=#545c7e bg=#1f2335"
-set-option -g window-status-format "#[fg=#545c7e]#{window_index}/#{pane_current_command} "
-set-option -g window-status-current-format "#[fg=#545c7e]#{window_index}/#[fg=#E9E9EA]#{pane_current_command} "
+set-option -g window-status-format "#[fg=#545c7e]#{window_index}/#{window_name} "
+set-option -g window-status-current-format "#[fg=#545c7e]#{window_index}/#[fg=#E9E9EA]#{window_name} "
 set-option -g window-status-current-style "fg=#E9E9EA"
 set-option -g window-status-activity-style none
 set-option -g pane-active-border-style "fg=#1f2335"
@@ -76,22 +76,9 @@ set-option -g pane-border-style "fg=#1f2335"
 # Key Bindings
 #--------------------------------------------------------------------------
 
-# -r means that the bind can repeat without entering prefix again
-# -n means that the bind doesn't use the prefix
-
-# Set the prefix to Ctrl+Space
-set -g prefix C-Space
-
-# Send prefix to a nested tmux session by doubling the prefix
-bind C-Space send-prefix
-
 # 'PREFIX r' to reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf\; display-message '~/.tmux.conf reloaded'
-
-# Allow holding Ctrl when using using prefix+p/n for switching windows
-bind C-p previous-window
-bind C-n next-window
 
 # Move around panes like in vim
 bind -r h select-pane -L
@@ -109,30 +96,8 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # Switch between previous and next windows with repeatable
-bind -r n next-window
-bind -r p previous-window
-
-# Move the current window to the next window or previous window position
-bind -r N run-shell "tmux swap-window -t $(expr $(tmux list-windows | grep \"(active)\" | cut -d \":\" -f 1) + 1)"
-bind -r P run-shell "tmux swap-window -t $(expr $(tmux list-windows | grep \"(active)\" | cut -d \":\" -f 1) - 1)"
-
-bind-key > swap-window -t +1 \; next
-bind-key < swap-window -t -1 \; prev
-
-# Switch between two most recently used windows
-bind Space last-window
-
-# Switch between two most recently used sessions
-bind ^ switch-client -l
-
-# use PREFIX+| (or PREFIX+\) to split window horizontally and PREFIX+- or
-# (PREFIX+_) to split vertically also use the current pane path to define the
-# new pane path
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-
-# Change the path for newly created windows
-bind c new-window -c "#{pane_current_path}"
+# bind -r n next-window
+# bind -r p previous-window
 
 # Setup 'v' to begin selection as in Vim
 if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.4" | bc)" = 1 ]' \
